Entrega 2: agregar un busqueda por costomerId
