# src/main/java/com/nttdata/creditproducts/service/controller/CreditCardController.java
@@ -1,12 +1,17 @@
 package com.nttdata.creditproducts.service.controller;
 
 import com.nttdata.creditproducts.service.service.CreditCardService;
+import io.swagger.v3.oas.annotations.Parameter;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.CreditcardsApi;
+import org.openapitools.model.CardRequest;
+import org.openapitools.model.CardResponse;
 import org.openapitools.model.CreditCard;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
@@ -23,4 +28,11 @@ public class CreditCardController implements CreditcardsApi {
         logger.info("Starting createCreditCard");
         return creditCard.flatMap(creditCardService::createCreditCard);
     }
+
+    @Override
+    public Mono<ResponseEntity<CardResponse>> hascreeditcard(Mono<CardRequest> cardRequest, ServerWebExchange exchange) {
+        logger.info("Starting hascreeditcard");
+        return cardRequest.flatMap(creditCardService::validCreditCard);
+    }
+
 }
